<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageVatTu"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/content" />

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/tenVatTu"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:text="@string/cap_mang"
                    android:textColor="@color/black"

                    />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/GiaVatTu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gia_cap"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_slash"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/txt_dvt"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/dvt_cap" />


            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iconEdit"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_pen"
            android:contentDescription="@string/content" />

    </LinearLayout>


</LinearLayout>